--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="">Web<span>Studio</span></a>
+      <a href="">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -16,15 +16,18 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
-      <h1>
-        Effective Solutions<br />
-        for Your Business Order Service
-      </h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business Order Service</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <h2 hidden>Features</h2>
         <ul>
