--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
   </head>
   <body>
     <header>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
+        <address>
+          <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business Order Service</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
@@ -137,7 +137,7 @@
       </section>
     </main>
     <footer>
-      <a href="">Web<span>Studio</span></a>
+      <a href="./index.html">Web<span>Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
